# ReciPie-An-AI-powered-Recipe-Management-App

./: DEPLOYMENT.md  DEPLOY_CHECKLIST.md  README.md  vercel.json
ReciPie/: .env.example  .gitignore  README.md  chatbot.py  index.py  pyproject.toml  requirements.txt
ReciPie/config/: db.py
ReciPie/models/: models.py
ReciPie/routes/: routes.py
ReciPie/schemas/: schemas.py
ReciPie/templates/: chat.html  edit.html  index.html
